Few Content Changes

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                                 <nav>
                                     <ul id="navigation">    
                                         <li class="active"><a href="index.html"> Home</a></li>
-                                        <li><a href="feature.html">About Us</a></li>
-                                        <li><a href="feature.html">How It Works</a></li>
-                                        <li><a href="feature.html">Gallery</a></li>
-                                        <li><a href="services.html">Blog</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="./#about">About Us</a></li>
+                                        <li><a href="./#how">How It Works</a></li>
+                                        <li><a href="./#gallery">Gallery</a></li>
+                                        <li><a href="https://blog.foodscribe.in">Blog</a></li>
+                                        <li><a href="./#contact">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -494,7 +494,7 @@
                              </div>
                              <div class="footer-tittle">
                                  <div class="footer-pera">
-                                     <p class="info1">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore.</p>
+                                     <p class="info1">A new-gen app for with golden age values for healthy lifestyle.</p>
                                 </div>
                              </div>
                          </div>
@@ -504,11 +504,11 @@
                             <div class="footer-tittle">
                                 <h4>Quick Links</h4>
                                 <ul>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Features</a></li>
-                                    <li><a href="#">Pricing</a></li>
-                                    <li><a href="#">Download</a></li>
-                                    <li><a href="#">Reviews</a></li>
+                                    <li><a href="./">Home</a></li>
+                                    <li><a href="./#about">About</a></li>
+                                    <li><a href="./#how"></a>How It works</li>
+                                    <li><a href="./#gallery">Gallery</a></li>
+                                    <li><a href="https://blog.foodscribe.in">Blog</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -518,11 +518,11 @@
                             <div class="footer-tittle">
                                 <h4>Support</h4>
                                 <ul>
-                                    <li><a href="#">Report a bug</a></li>
-                                    <li><a href="#">Privacy Policy</a></li>
-                                    <li><a href="#">Terms & Conditions</a></li>
-                                    <li><a href="#">Sitemap</a></li>
-                                    <li><a href="#">FAQs</a></li>
+                                    <li><a href="./#contact">Report a bug</a></li>
+                                    <li><a href="./tnc.html">Privacy Policy</a></li>
+                                    <li><a href="./tnc.html">Terms & Conditions</a></li>
+                                    <li><a href="./sitemap.xml">Sitemap</a></li>
+                                    <li><a href="./#faq">FAQs</a></li>
                                 </ul>
                             </div>
                         </div>
