--- a/tnc.html
+++ b/tnc.html
@@ -201,94 +201,91 @@ As long as the website/App and the information and services on the website/App a
  
  
  
- 
-    <footer>
-
-        <!-- Footer Start-->
-       <div class="footer-main">
-         <div class="footer-area footer-padding">
-             <div class="container">
-                 <div class="row  justify-content-between">
-                     <div class="col-lg-3 col-md-4 col-sm-8">
-                          <div class="single-footer-caption mb-30">
-                               <!-- logo -->
-                              <div class="footer-logo">
-                                  <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
-                              </div>
-                              <div class="footer-tittle">
-                                  <div class="footer-pera">
-                                      <p class="info1">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore.</p>
+  <!-- Footer Start-->
+      <div class="footer-main">
+        <div class="footer-area footer-padding">
+            <div class="container">
+                <div class="row  justify-content-between">
+                    <div class="col-lg-3 col-md-4 col-sm-8">
+                         <div class="single-footer-caption mb-30">
+                              <!-- logo -->
+                             <div class="footer-logo">
+                                 <a href="./"><img src="assets/img/logo/logo.svg" alt=""></a>
+                             </div>
+                             <div class="footer-tittle">
+                                 <div class="footer-pera">
+                                     <p class="info1">A new-gen app for with golden age values for healthy lifestyle.</p>
+                                </div>
+                             </div>
+                         </div>
+                    </div>
+                    <div class="col-lg-2 col-md-4 col-sm-5">
+                        <div class="single-footer-caption mb-50">
+                            <div class="footer-tittle">
+                                <h4>Quick Links</h4>
+                                <ul>
+                                    <li><a href="./">Home</a></li>
+                                    <li><a href="./#about">About</a></li>
+                                    <li><a href="./#how"></a>How It works</li>
+                                    <li><a href="./#gallery">Gallery</a></li>
+                                    <li><a href="https://blog.foodscribe.in">Blog</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-4 col-sm-7">
+                        <div class="single-footer-caption mb-50">
+                            <div class="footer-tittle">
+                                <h4>Support</h4>
+                                <ul>
+                                    <li><a href="./#contact">Report a bug</a></li>
+                                    <li><a href="./tnc.html">Privacy Policy</a></li>
+                                    <li><a href="./tnc.html">Terms & Conditions</a></li>
+                                    <li><a href="./sitemap.xml">Sitemap</a></li>
+                                    <li><a href="./#faq">FAQs</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-8">
+                        <div class="single-footer-caption mb-50">
+                            <div class="footer-tittle">
+                                <h4>Newsletter</h4>
+                                <div class="footer-pera footer-pera2">
+                                 <p>Heaven fruitful doesn't over lesser in days. Appear </p>
+                             </div>
+                             <!-- Form -->
+                             <div class="footer-form">
+                                 <div id="mc_embed_signup">
+                                     <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative mail_part" novalidate="true">
+                                         <input type="email" name="EMAIL" id="newsletter-form-email" placeholder=" Email Address " class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = ' Email Address '">
+                                         <div class="form-icon">
+                                             <button type="submit" name="submit" id="newsletter-submit" class="email_icon newsletter-submit button-contactForm"><img src="assets/img/shape/form_icon.png" alt=""></button>
+                                         </div>
+                                         <div class="mt-10 info"></div>
+                                     </form>
                                  </div>
-                              </div>
-                          </div>
-                     </div>
-                     <div class="col-lg-2 col-md-4 col-sm-5">
-                         <div class="single-footer-caption mb-50">
-                             <div class="footer-tittle">
-                                 <h4>Quick Links</h4>
-                                 <ul>
-                                     <li><a href="#">About</a></li>
-                                     <li><a href="#">Features</a></li>
-                                     <li><a href="#">Pricing</a></li>
-                                     <li><a href="#">Download</a></li>
-                                     <li><a href="#">Reviews</a></li>
-                                 </ul>
                              </div>
-                         </div>
-                     </div>
-                     <div class="col-lg-2 col-md-4 col-sm-7">
-                         <div class="single-footer-caption mb-50">
-                             <div class="footer-tittle">
-                                 <h4>Support</h4>
-                                 <ul>
-                                     <li><a href="#">Report a bug</a></li>
-                                     <li><a href="#">Privacy Policy</a></li>
-                                     <li><a href="#">Terms & Conditions</a></li>
-                                     <li><a href="#">Sitemap</a></li>
-                                     <li><a href="#">FAQs</a></li>
-                                 </ul>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="col-lg-3 col-md-6 col-sm-8">
-                         <div class="single-footer-caption mb-50">
-                             <div class="footer-tittle">
-                                 <h4>Newsletter</h4>
-                                 <div class="footer-pera footer-pera2">
-                                  <p>Heaven fruitful doesn't over lesser in days. Appear </p>
-                              </div>
-                              <!-- Form -->
-                              <div class="footer-form">
-                                  <div id="mc_embed_signup">
-                                      <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative mail_part" novalidate="true">
-                                          <input type="email" name="EMAIL" id="newsletter-form-email" placeholder=" Email Address " class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = ' Email Address '">
-                                          <div class="form-icon">
-                                              <button type="submit" name="submit" id="newsletter-submit" class="email_icon newsletter-submit button-contactForm"><img src="assets/img/shape/form_icon.png" alt=""></button>
-                                          </div>
-                                          <div class="mt-10 info"></div>
-                                      </form>
-                                  </div>
-                              </div>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
-                 <!-- Copy-Right -->
-                 <div class="row align-items-center">
-                     <div class="col-xl-12 ">
-                         <div class="footer-copy-right">
-                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                         </div>
-                     </div>
-                 </div>
-             </div>
-         </div>
-       </div>
-        <!-- Footer End-->
- 
-    </footer>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Copy-Right -->
+                <div class="row align-items-center">
+                    <div class="col-xl-12 ">
+                        <div class="footer-copy-right">
+                           <p>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Developed By <i class="ti-heart" aria-hidden="true"></i> by <a href="https://npsol.in" target="_blank">NP Solutions</a>
+  </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+       <!-- Footer End-->
+
+   </footer>
 
     <!-- JS here -->
 	
