--- a/tnc.html
+++ b/tnc.html
@@ -275,7 +275,7 @@ As long as the website/App and the information and services on the website/App a
                     <div class="col-xl-12 ">
                         <div class="footer-copy-right">
                            <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Developed By <i class="ti-heart" aria-hidden="true"></i> by <a href="https://npsol.in" target="_blank">NP Solutions</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Developed By <i class="ti-heart" aria-hidden="true"></i> by <a href="https://npsol.in" target="_blank">NP Solutions</a> with <a href="https://colorlib.com">Colorlib</a> Template
   </p>
                         </div>
                     </div>
