--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@
                 <div class="row align-items-center">
                     <div class="col-xl-12 ">
                         <div class="footer-copy-right">
-                           <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Developed By <i class="ti-heart" aria-hidden="true"></i> by <a href="https://npsol.in" target="_blank">NP Solutions</a>
+                              <p>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Developed By <i class="ti-heart" aria-hidden="true"></i> by <a href="https://npsol.in" target="_blank">NP Solutions</a> with <a href="https://colorlib.com">Colorlib</a> Template
   </p>
                         </div>
                     </div>
